--- a/editor.html
+++ b/editor.html
@@ -63,6 +63,10 @@
       background-color: #2196F3;
       color: white;
     }
+    .btn-back {
+      background-color: #9E9E9E;
+      color: white;
+    }
     .image-preview {
       margin-top: 1rem;
     }
@@ -100,6 +104,7 @@
         <button type="submit" class="btn-save">保存</button>
         <button type="button" id="deleteBtn" class="btn-delete" style="display: none;">削除</button>
         <button type="button" id="previewBtn" class="btn-preview">プレビュー</button>
+        <button type="button" class="btn-back" onclick="window.location.href='index.html'">トップページへ戻る</button>
       </div>
       <p id="dateInfo"></p>
     </form>
