--- a/editor.html
+++ b/editor.html
@@ -7,8 +7,9 @@
   <style>
     body {
       font-family: sans-serif;
-      padding: 2rem;
+      padding: 1rem;
       background: #f4f4f4;
+      margin: 0;
     }
     .editor-container {
       max-width: 800px;
@@ -19,8 +20,9 @@
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
     h1 {
-      font-size: 2rem;
+      font-size: 1.5rem;
       margin-bottom: 1rem;
+      text-align: center;
     }
     .form-group {
       margin-bottom: 1rem;
@@ -31,10 +33,11 @@
     }
     input[type="text"], textarea, select {
       width: 100%;
-      padding: 0.5rem;
+      padding: 0.8rem;
       font-size: 1rem;
       border: 1px solid #ccc;
       border-radius: 4px;
+      box-sizing: border-box;
     }
     textarea {
       min-height: 200px;
@@ -42,14 +45,17 @@
     .button-group {
       margin-top: 1rem;
       display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
       justify-content: space-between;
     }
     button {
-      padding: 0.75rem 1.5rem;
+      padding: 0.8rem 1.5rem;
       font-size: 1rem;
       cursor: pointer;
       border: none;
       border-radius: 4px;
+      width: 100%;
     }
     .btn-save {
       background-color: #4CAF50;
@@ -69,10 +75,31 @@
     }
     .image-preview {
       margin-top: 1rem;
+      max-width: 100%;
+      overflow-x: auto;
     }
     .image-preview img {
-      max-width: 100%;
+      width: 100%;
       height: auto;
+      max-width: 500px;
+      margin-bottom: 1rem;
+    }
+
+    /* Mobile-first design adjustments */
+    @media (max-width: 600px) {
+      .editor-container {
+        padding: 1rem;
+      }
+      .button-group {
+        flex-direction: column;
+      }
+      button {
+        width: 100%;
+        margin-bottom: 1rem;
+      }
+      h1 {
+        font-size: 1.2rem;
+      }
     }
   </style>
 </head>
@@ -107,6 +134,8 @@
       </div>
       <p id="dateInfo"></p>
     </form>
+
+    <div class="image-preview" id="imagePreview"></div>
   </div>
 
   <script>
