--- a/editor.html
+++ b/editor.html
@@ -50,6 +50,7 @@
       background-color: #fafafa;
       white-space: pre-wrap;
       overflow-wrap: break-word;
+      resize: none;
     }
     .button-group {
       margin-top: 1rem;
