--- a/editor.html
+++ b/editor.html
@@ -139,7 +139,7 @@
       </div>
       <div class="form-group">
         <label for="imageInput">画像を挿入：</label>
-        <input type="file" id="imageInput" accept="image/*" multiple />
+        <input type="file" id="imageInput" accept="image/*" />
       </div>
       <div class="button-group">
         <button type="submit" class="btn-save">保存</button>
