--- a/article.html
+++ b/article.html
@@ -7,13 +7,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --main-color: #0d47a1; /* メインカラー */
-      --accent-color: #3498db; /* 明るい青 */
-      --bg-gradient: linear-gradient(135deg, #ecf0f1, #bbdefb); /* グラデーション背景 */
-      --card-bg: #ffffff; /* 白背景 */
-      --text-color: #2c3e50; /* テキストカラー */
-      --delete-color: #e74c3c; /* 削除ボタンの赤 */
-      --delete-hover: #c0392b; /* 削除ボタンホバー */
+      --main-color: #0d47a1;
+      --accent-color: #3498db;
+      --bg-gradient: linear-gradient(135deg, #ecf0f1, #bbdefb);
+      --card-bg: #ffffff;
+      --text-color: #2c3e50;
+      --delete-color: #e74c3c;
+      --delete-hover: #c0392b;
     }
     body {
       font-family: 'Noto Sans JP', sans-serif;
@@ -28,7 +28,7 @@
       background: var(--card-bg);
       padding: 30px;
       border-radius: 12px;
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1); /* 軽いシャドウ */
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
       margin-bottom: 40px;
     }
     h1 {
@@ -41,14 +41,14 @@
       display: block;
       text-align: center;
       margin-bottom: 30px;
-      color: #7f8c8d; /* グレー */
+      color: #7f8c8d;
       font-size: 0.9em;
     }
     p {
       margin-bottom: 20px;
       white-space: pre-wrap;
       font-size: 1.1em;
-      color: var(--text-color); /* ダークカラー */
+      color: var(--text-color);
     }
     img {
       max-width: 100%;
@@ -140,16 +140,11 @@ function formatDate(dateStr) {
   return date.toLocaleDateString('ja-JP', { year: 'numeric', month: 'long', day: 'numeric' });
 }
 
-// 記事の本文中に画像を挿入
-function renderContent(content) {
-  return content.replace(/<img src="([^"]+)" alt="([^"]+)">/g, '<img src="$1" alt="$2">');
-}
-
 if (article && article.status === "published") {
   articleContent.innerHTML = `
     <h1>${article.title}</h1>
     <time>公開日: ${formatDate(article.datePublished)}</time>
-    <p>${renderContent(article.content)}</p>
+    <div>${article.content}</div>
   `;
   deleteBtn.style.display = "inline-block";
   editBtn.href = `editor.html?id=${id}`;
@@ -158,7 +153,7 @@ if (article && article.status === "published") {
   articleContent.innerHTML = "<p>記事が見つからないか、まだ公開されていません。</p>";
 }
 
-// 削除ボタンの処理
+// 削除処理
 deleteBtn.addEventListener("click", function() {
   if (confirm("この記事を本当に削除しますか？")) {
     delete articles[id];
