--- a/editor.html
+++ b/editor.html
@@ -110,102 +110,149 @@
       <p id="dateInfo"></p>
     </form>
   </div>
+<script>
+  const form = document.getElementById("editorForm");
+  const titleInput = document.getElementById("title");
+  const contentInput = document.getElementById("content");
+  const statusSelect = document.getElementById("status");
+  const deleteBtn = document.getElementById("deleteBtn");
+  const dateInfo = document.getElementById("dateInfo");
+  const imageInput = document.getElementById("imageInput");
+  const saveButton = document.getElementById("saveButton");
 
-  <script>
-    const form = document.getElementById("editorForm");
-    const titleInput = document.getElementById("title");
-    const contentInput = document.getElementById("content");
-    const statusSelect = document.getElementById("status");
-    const deleteBtn = document.getElementById("deleteBtn");
-    const dateInfo = document.getElementById("dateInfo");
-    const imageInput = document.getElementById("imageInput");
-    const saveButton = document.getElementById("saveButton");
+  const urlParams = new URLSearchParams(location.search);
+  const editId = urlParams.get("id");
+  let articles = JSON.parse(localStorage.getItem("articles") || "{}");
 
-    const urlParams = new URLSearchParams(location.search);
-    const editId = urlParams.get("id");
-    let articles = JSON.parse(localStorage.getItem("articles") || "{}");
+  // --- IndexedDB初期化 ---
+  let db;
+  const request = indexedDB.open("ArticleImagesDB", 1);
+  request.onupgradeneeded = (e) => {
+    db = e.target.result;
+    db.createObjectStore("images", { keyPath: "id" });
+  };
+  request.onsuccess = (e) => {
+    db = e.target.result;
+    loadArticle(); // DB準備できたら記事読み込み
+  };
+  request.onerror = () => alert("IndexedDBエラー");
 
-    function formatDate(dateStr) {
-      if (!dateStr) return "不明";
-      const d = new Date(dateStr);
-      return d.toLocaleDateString("ja-JP", { year: "numeric", month: "long", day: "numeric" });
-    }
+  // --- ID生成 ---
+  const generateId = () => Date.now().toString() + Math.random().toString(36).substr(2, 5);
 
-    function loadArticle() {
-      if (editId && articles[editId]) {
-        const article = articles[editId];
-        titleInput.value = article.title;
-        contentInput.innerHTML = article.content;
-        statusSelect.value = article.status || "draft";
-        deleteBtn.style.display = "inline-block";
-        dateInfo.innerText = `公開日: ${formatDate(article.datePublished)} / 更新日: ${formatDate(article.dateUpdated)}`;
-      }
-    }
+  // --- IndexedDBに画像保存 ---
+  function saveImage(file, callback) {
+    const reader = new FileReader();
+    reader.onload = function (e) {
+      const id = generateId();
+      const transaction = db.transaction("images", "readwrite");
+      const store = transaction.objectStore("images");
+      store.put({ id, data: e.target.result });
+      transaction.oncomplete = () => callback(id);
+    };
+    reader.readAsDataURL(file);
+  }
 
-    imageInput.addEventListener("change", async (event) => {
-      const file = event.target.files[0];
-      if (!file) return;
+  // --- IndexedDBから画像読み込み（表示用） ---
+  function loadImagesInContent(contentEl, callback) {
+    const imgs = contentEl.querySelectorAll("img[data-img-id]");
+    let pending = imgs.length;
+    if (pending === 0) return callback?.();
 
-      const reader = new FileReader();
-      reader.onload = function (e) {
-        const dataURL = e.target.result;
-        const img = document.createElement("img");
-        img.src = dataURL;
-        img.alt = "画像";
-        img.style.maxWidth = "100%";
-        img.style.height = "auto";
-
-        const selection = window.getSelection();
-        const range = selection.getRangeAt(0);
-        range.deleteContents();
-        range.insertNode(img);
-
-        const newRange = document.createRange();
-        newRange.setStartAfter(img);
-        newRange.setEndAfter(img);
-        selection.removeAllRanges();
-        selection.addRange(newRange);
-        
-        contentInput.focus();
-        saveButton.disabled = false;  // 保存ボタンを有効にする
+    imgs.forEach(img => {
+      const id = img.getAttribute("data-img-id");
+      const tx = db.transaction("images", "readonly");
+      const store = tx.objectStore("images");
+      const req = store.get(id);
+      req.onsuccess = () => {
+        img.src = req.result?.data || "";
+        img.removeAttribute("data-img-id");
+        if (--pending === 0) callback?.();
       };
-      reader.readAsDataURL(file);
-      imageInput.value = "";
+    });
+  }
+
+  // --- 画像挿入時の処理 ---
+  imageInput.addEventListener("change", (event) => {
+    const file = event.target.files[0];
+    if (!file || !db) return;
+
+    saveImage(file, (id) => {
+      const img = document.createElement("img");
+      img.setAttribute("data-img-id", id);
+      img.alt = "画像";
+      img.style.maxWidth = "100%";
+      img.style.height = "auto";
+
+      const selection = window.getSelection();
+      const range = selection.getRangeAt(0);
+      range.deleteContents();
+      range.insertNode(img);
+      selection.removeAllRanges();
+
+      const newRange = document.createRange();
+      newRange.setStartAfter(img);
+      newRange.setEndAfter(img);
+      selection.addRange(newRange);
+      contentInput.focus();
     });
 
-    form.addEventListener("submit", function (e) {
-      e.preventDefault();
+    imageInput.value = "";
+  });
 
-      const title = titleInput.value.trim();
-      const content = contentInput.innerHTML.trim();
-      const status = statusSelect.value;
-      if (!title || !content) return alert("すべて入力してね！");
+  function formatDate(dateStr) {
+    if (!dateStr) return "不明";
+    const d = new Date(dateStr);
+    return d.toLocaleDateString("ja-JP", { year: "numeric", month: "long", day: "numeric" });
+  }
 
-      const now = new Date();
-      const dateStr = now.toISOString();
-      const id = editId || Date.now().toString();
-      const old = articles[id] || {};
-      const datePublished = old.datePublished || dateStr;
-      const dateUpdated = dateStr;
+  function loadArticle() {
+    if (editId && articles[editId]) {
+      const article = articles[editId];
+      titleInput.value = article.title;
+      contentInput.innerHTML = article.content;
+      statusSelect.value = article.status || "draft";
+      deleteBtn.style.display = "inline-block";
+      dateInfo.innerText = `公開日: ${formatDate(article.datePublished)} / 更新日: ${formatDate(article.dateUpdated)}`;
+      loadImagesInContent(contentInput);
+    }
+  }
 
-      articles[id] = { id, title, content, datePublished, dateUpdated, status };
+  form.addEventListener("submit", function (e) {
+    e.preventDefault();
+    const title = titleInput.value.trim();
+    const content = contentInput.innerHTML.trim();
+    const status = statusSelect.value;
+    if (!title || !content) return alert("すべて入力してね！");
+
+    const now = new Date();
+    const dateStr = now.toISOString();
+    const id = editId || Date.now().toString();
+    const old = articles[id] || {};
+    const datePublished = old.datePublished || dateStr;
+    const dateUpdated = dateStr;
+
+    articles[id] = { id, title, content, datePublished, dateUpdated, status };
+    try {
       localStorage.setItem("articles", JSON.stringify(articles));
-      alert("保存しました！");
-      location.href = status === "draft" ? "drafts.html" : "index.html";
-    });
+    } catch (err) {
+      alert("保存に失敗しました（容量制限の可能性）");
+      return;
+    }
 
-    deleteBtn.addEventListener("click", () => {
-      if (confirm("この記事を削除していい？")) {
-        delete articles[editId];
-        localStorage.setItem("articles", JSON.stringify(articles));
-        alert("削除しました！");
-        location.href = "index.html";
-      }
-    });
+    alert("保存しました！");
+    location.href = status === "draft" ? "drafts.html" : "index.html";
+  });
 
-    window.addEventListener("DOMContentLoaded", () => {
-      loadArticle();
-    });
-  </script>
+  deleteBtn.addEventListener("click", () => {
+    if (confirm("この記事を削除していい？")) {
+      delete articles[editId];
+      localStorage.setItem("articles", JSON.stringify(articles));
+      alert("削除しました！");
+      location.href = "index.html";
+    }
+  });
+</script>
+
 </body>
 </html>
